--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="center">
 
 
-    <!--TABs-->
+    <!--TABs-------------------------------------------------------------------------------------->
 
     <h3 class="title">Tabs</h3>
     <input type="radio" name="tab" id="tab-1" checked>
@@ -80,7 +80,7 @@
     <hr>
 </div>
 
-<!--Ховеры на блоках-->
+<!--Ховеры на блоках------------------------------------------------------------------------------------>
 <div class="wrapper">
 
     <!--Ховеры на блоках-->
@@ -97,7 +97,7 @@
     <hr>
 </div>
 
-<!--Menu icon-->
+<!--Menu icon---------------------------------------------------------------------------------------->
 
 <div class="center">
     <h3 class="title">Menu icon</h3>
@@ -121,7 +121,7 @@
 </div>
 <hr>
 
-<!--checkbox and radio-->
+<!--checkbox and radio------------------------------------------------------------------------------->
 
 <div class="center">
 
@@ -171,11 +171,12 @@
 
     <!--menu slide from left-------------------------------------------------------------------->
 
+<!--
     <div class="menu">
         <div class="button">
             <button class="menu-open"><span></span></button>
         </div>
-        <!--Список будет выезжать над контентом-->
+        Список будет выезжать над контентом
         <ul class="menu__list">
             <li class="menu__items"><a href="menu-page.html">Link1</a></li>
             <li class="menu__items"><a href="">Link2</a></li>
@@ -189,11 +190,27 @@
             </p>
         </div>
     </div>
+-->
 
     <!--Анимированная строка поиска-------------------------------------------------------------->
 
     <div class="search">
         <input type="text" name="search" id="search-input" placeholder="Поиск..">
+    </div>
+    
+    <!--Плюс на фото-------------------------------------------------------------->
+    
+    <div class="image-kit">
+       <div class="images">
+           <ul class="images__list">
+               <li class="images__item"><a href="#"><img src="img/landscape/landscape-4.jpg" alt="land"></a></li>
+               <li class="images__item"><a href="#"><img src="img/landscape/landscape-5.jpg" alt="land"></a></li>
+               <li class="images__item"><a href="#"><img src="img/landscape/landscape-6.jpg" alt="land"></a></li>
+               <li class="images__item"><a href="#"><img src="img/landscape/landscape-4.jpg" alt="land"></a></li>
+               <li class="images__item"><a href="#"><img src="img/landscape/landscape-5.jpg" alt="land"></a></li>
+               <li class="images__item"><a href="#"><img src="img/landscape/landscape-6.jpg" alt="land"></a></li>
+           </ul>
+       </div>
     </div>
 
 </div>
