--- a/form-line.html
+++ b/form-line.html
@@ -17,6 +17,19 @@
     <title>FW</title>
 </head>
 <body>
+
+    <div class="menu-top-fixed">
+       <nav class="nav-fixed">
+           <ul class="nav-fixed__list">
+               <li><a href="index.html">Главная</a></li>
+               <li><a href="menu-page.html">Меню</a></li>
+               <li><a href="bg-attach.html">Фон-фикс</a></li>
+               <li><a href="form-line.html">Поиск сверху</a></li>
+               <li><a href="#">item-5</a></li>
+           </ul>
+       </nav>
+   </div>
+
 <!--Блок навигации -------------------------------------------------------------------------->
 <div class="navigation">
     <div class="center navigation__wrapper">
