--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <li><a href="index.html">Главная</a></li>
                <li><a href="menu-page.html">Меню</a></li>
                <li><a href="bg-attach.html">Фон-фикс</a></li>
-               <li><a href="#">item-4</a></li>
+               <li><a href="form-line.html">Поиск сверху</a></li>
                <li><a href="#">item-5</a></li>
            </ul>
        </nav>
