--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                <li><a href="bg-attach.html">Фон-фикс</a></li>
                <li><a href="form-line.html">Поиск сверху</a></li>
                <li><a href="#">item-5</a></li>
+               <li><a href="select.html">Селект</a></li>
            </ul>
        </nav>
    </div>
