--- a/form-line.html
+++ b/form-line.html
@@ -6,14 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/slick-theme.css">
-    <link rel="stylesheet" href="js/desoslide/dist/css/jquery.desoslide.min.css">
-    <link rel="stylesheet" href="js/desoslide/dist/css/animate.min.css">
-    <link rel="stylesheet" href="css/jquery.bxslider.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/library.min.css">
     <title>FW</title>
 </head>
 <body>
@@ -135,6 +129,7 @@
         </div>
     </div>
 </div>
+
 <!--Слайдер ------------------------------------------------------------------->
 
 <!--
@@ -196,10 +191,8 @@ div > div> h4 + p --- content . стандартная структура для
 
 
 
-<script type="text/javascript" src="js/slick-slider/slick/slick.min.js"></script>
-<script type="text/javascript" src="js/desoslide/dist/js/jquery.desoslide.min.js"></script>
-<script type="text/javascript" src="js/bxslider/jquery.bxslider.min.js"></script>
 <script src="js/script.js"></script>
+<script src="js/project.min.js"></script>
 
 
 </body>
