--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/library.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>FW</title>
 </head>
@@ -25,7 +25,7 @@
                <li><a href="menu-page.html">Меню</a></li>
                <li><a href="bg-attach.html">Фон-фикс</a></li>
                <li><a href="form-line.html">Поиск сверху</a></li>
-               <li><a href="#">item-5</a></li>
+               <li><a href="slider.html">Слайдер</a></li>
            </ul>
        </nav>
    </div>
