toggle list script

--- a/select.html
+++ b/select.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/sprites.css">
+<!--    <link rel="stylesheet" href="css/sprites.css">-->
     <link rel="stylesheet" href="css/font-awesome.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>FW</title>
@@ -34,8 +34,8 @@
    
    <div class="select">
        <div class="select__box">
-           <span class="select__choice icon-arr-down">Выберите модель</span><i class=""></i>
            <span class="select__ic-close"></span>
+           <span class="select__choice">Выберите модель</span>
            <ul class="select__list">
                <li><a href="#">Модель дверей 1</a></li>
                <li><a href="#">Модель дверей 2</a></li>
