--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                <li><a href="bg-attach.html">Фон-фикс</a></li>
                <li><a href="form-line.html">Поиск сверху</a></li>
                <li><a href="slider.html">Слайдер</a></li>
-               <li><a href="#">item-5</a></li>
                <li><a href="select.html">Селект</a></li>
+               <li><a href="language.html">Выбор языка</a></li>
 
            </ul>
        </nav>
