--- a/language.html
+++ b/language.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/library.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>FW</title>
 </head>
@@ -25,39 +25,33 @@
                <li><a href="menu-page.html">Меню</a></li>
                <li><a href="bg-attach.html">Фон-фикс</a></li>
                <li><a href="form-line.html">Поиск сверху</a></li>
-               <li><a href="#">item-5</a></li>
+               <li><a href="slider.html">Слайдер</a></li>
                <li><a href="select.html">Селект</a></li>
+               <li><a href="select.html">Выбор языка</a></li>
+
            </ul>
        </nav>
    </div>
    
-   <div class="select">
-       <div class="select__box">
-           <span class="select__ic-close"></span>
-           <span class="select__doors">Выберите модель</span>
-           <ul class="select__list-1">
-               <li><a href="#">Модель дверей 1</a></li>
-               <li><a href="#">Модель дверей 2</a></li>
-               <li><a href="#">Модель дверей 3</a></li>
-               <li><a href="#">Модель дверей 4</a></li>
-               <li><a href="#">Модель дверей 5</a></li>
-           </ul>
-       </div>
-       
-       <div class="select__box">
-           <span class="select__ic-close"></span>
-           <span class="select__material">Выберите материал</span>
-           <ul class="select__list-2">
-               <li><a href="#">Материал 1</a></li>
-               <li><a href="#">Материал 2</a></li>
-               <li><a href="#">Материал 3</a></li>
-           </ul>
-       </div>
+   <div class="language">
+       <ul class="language__list">
+           <li><a href="#">item-1</a></li>
+           <li><a href="#">item-2</a></li>
+           <li><a href="#">item-3</a></li>
+           <li><a href="#">item-4</a></li>
+           <li class="">
+               <a href="#" class="language__click">EN</a>
+               <ul class="language__sub-list">
+                   <li><a href="#" class="language__sub-link" data-lang="EN">English</a></li>
+                   <li><a href="#" class="language__sub-link" data-lang="UA">Украинский</a></li>
+                   <li><a href="#" class="language__sub-link" data-lang="IT">Italian</a></li>
+               </ul>
+           </li>
+       </ul>
    </div>
-   
-   
 
-</div><!-- ./Center end -->
+</div>
+<!--Center end-->
 
 
 <script src="js/script.js"></script>
