--- a/language.html
+++ b/language.html
@@ -42,16 +42,22 @@
            <li class="">
                <a href="#" class="language__click">EN</a>
                <ul class="language__sub-list">
-                   <li><a href="#" class="language__sub-link" data-lang="EN">English</a></li>
-                   <li><a href="#" class="language__sub-link" data-lang="UA">Украинский</a></li>
-                   <li><a href="#" class="language__sub-link" data-lang="IT">Italian</a></li>
+                   <li><a href="#" class="language__sub-link" data-lang="EN"></a></li>
+                   <li><a href="#" class="language__sub-link" data-lang="UA"></a></li>
+                   <li><a href="#" class="language__sub-link" data-lang="IT"></a></li>
                </ul>
            </li>
        </ul>
    </div>
+    <div class="fff">
+       <a href="#" class="exp" data-descr="Это космос">
+           <img src="img/space/space-1.jpg" alt="space">
+       </a>
+        
+        <img src="img/space/space-2.jpg" alt="space" data-descr="Это космос">
+    </div>
+</div><!--Center end-->
 
-</div>
-<!--Center end-->
 
 
 <script src="js/script.js"></script>
