--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                <li><a href="slider.html">Слайдер</a></li>
                <li><a href="select.html">Селект</a></li>
                <li><a href="language.html">Выбор языка</a></li>
+               <li><a href="goods-block.html">Магазин</a></li>
 
            </ul>
        </nav>
