--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                <li><a href="select.html">Селект</a></li>
                <li><a href="language.html">Выбор языка</a></li>
                <li><a href="goods-block.html">Магазин</a></li>
+               <li><a href="sticky-header.html">Sticky header</a></li>
 
            </ul>
        </nav>
