--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main>
 <div class="center">
    
-   <!--Menu Top Fixed--------------------------------------------------------------------------------->
+   <!--Menu Top Fixed-->
    
    <div class="menu-top-fixed">
        <nav class="nav-fixed">
@@ -30,12 +30,14 @@
                <li><a href="language.html">Выбор языка</a></li>
                <li><a href="goods-block.html">Магазин</a></li>
                <li><a href="sticky-header.html">Sticky header</a></li>
+               <li><a href="side-nav.html">Side nav</a></li>
 
            </ul>
        </nav>
-   </div>
+   </div><!--./menu top fixed-->
    
-   <!--Accordion-------------------------------------------------------------------------------------->
+   <!--Accordion-->
+   
     <h3 class="title">Accordion</h3>
     <ul class="accordion">
         <li class="accordion-tab">
@@ -84,7 +86,7 @@
     <hr>
 </div>
 
-<!--Ховеры на блоках------------------------------------------------------------------------------------>
+<!--Ховеры на блоках-->
 <div class="wrapper">
 
     <!--Ховеры на блоках-->
@@ -101,7 +103,7 @@
     <hr>
 </div>
 
-<!--Menu icon---------------------------------------------------------------------------------------->
+<!--Menu icon-->
 
 <div class="center">
     <h3 class="title">Menu icon</h3>
@@ -125,7 +127,7 @@
 </div>
 <hr>
 
-<!--checkbox and radio------------------------------------------------------------------------------->
+<!--checkbox and radio-->
 
 <div class="center">
 
@@ -166,14 +168,14 @@
 
     </div>
 
-    <!--menu icon animate----------------------------------------------------------------------->
+    <!--menu icon animate-->
 
     <div class="active-menu-ic">
         <button><span></span></button>
     </div>
     <hr>
 
-    <!--menu slide from left-------------------------------------------------------------------->
+    <!--menu slide from left-->
 
 <!--
     <div class="menu">
