--- a/sticky-header.html
+++ b/sticky-header.html
@@ -14,8 +14,20 @@
 <body>
 
     <header class="header">
-       <div class="header__logo">LOGO</div>
-       <div class="header__nav">NAV</div>
+      <div class="center">
+       <div class="header__logo">
+           <img src="img/marvel-sm.jpg" alt="marvel">
+       </div>
+       <div class="header__nav">
+           <ul class="header__list">
+               <li><a href="#">Link-1</a></li>
+               <li><a href="#">Link-2</a></li>
+               <li><a href="#">Link-3</a></li>
+               <li><a href="#">Link-4</a></li>
+               <li><a href="#">Link-5</a></li>
+           </ul>
+       </div>
+     </div>
    </header>
 
 <main>
@@ -40,10 +52,6 @@
        </nav>
    </div>
    
-   <div class="header__demo">
-       demo
-   </div>
-   
    <p>Bear with me. At the end of “And It’s Surely to Their Credit,” the fifth episode of the second season of The West Wing, there’s a scene that sums up a lot of the show’s strong, formative appeal to the current generation of political people and the wonk class. A spunky, smart Republican named Ainsley Hayes joins the Bartlett White House. Some brocialists in the office are jerks to her. Eventually the good guys find out, fire the jerks, and end up in Hayes’ office, where they sing her a Gilbert & Sullivan tune and initiate her into the show’s fraternity.
 All of Aaron Sorkin’s shows are about ad-hoc families and their ad-hoc dads. In The West Wing, the family is the Bartlett administration, but it’s also politics more generally. There are some straw-man villains, but generally everybody shares some high-minded goals and is trying to achieve some platonic idea of Good. They come from the Ivy League, they all banter, they sleep with each other, and they argue about Social Security or whatever. It’s a political fantasy. That’s not to knock it: I’d rather live in that world than this one. But the world of the show is possible because so little is actually at stake. Most of the early plot points are about tiny policy changes and budget minutiae, minor foreign crises, and personal drama. It was a show of the 1990s, which is to say it was of a time when everybody was fat and happy and concerned mostly about bullshit.
  
@@ -58,7 +66,6 @@ Sunday night’s successful effort by some self-identified Democrats to raise mo
 </div><!--./center end-->
 
 
-<script src="js/headhesive.js-master/dist/headhesive.js"></script>
 <script src="js/script.js"></script>
 </main>
 </body>
