--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                <li><a href="goods-block.html">Магазин</a></li>
                <li><a href="sticky-header.html">Sticky header</a></li>
                <li><a href="side-nav.html">Side nav</a></li>
+               <li><a href="tooltip.html">Tooltip</a></li>
 
            </ul>
        </nav>
