--- a/sticky-header.html
+++ b/sticky-header.html
@@ -26,7 +26,7 @@
                <li><a href="#">Link-4</a></li>
                <li><a href="#">Link-5</a></li>
            </ul>
-       </div>
+       </div><!--./header__nav-->
      </div>
    </header>
 
