sticky footer and goods card

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
                <li><a href="language.html">Выбор языка</a></li>
                <li><a href="goods-block.html">Магазин</a></li>
                <li><a href="sticky-header.html">Sticky header</a></li>
+               <li><a href="sticky-footer.html">Sticky footer</a></li>
+               <li><a href="sticky-footer-2.html">Sticky footer-2</a></li>
                <li><a href="side-nav.html">Side nav</a></li>
                <li><a href="tooltip.html">Tooltip</a></li>
+               <li><a href="goods-cards.html">Превью товара</a></li>
 
            </ul>
        </nav>
