--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                <li><a href="goods-cards.html">Превью товара</a></li>
                <li><a href="first-screen.html">First-screen</a></li>
                <li><a href="button-test.html">Кнопка</a></li>
+               <li><a href="menu-table.html">Nav</a></li>
 
            </ul>
        </nav>
