--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                <li><a href="first-screen.html">First-screen</a></li>
                <li><a href="button-test.html">Кнопка</a></li>
                <li><a href="menu-table.html">Nav</a></li>
+               <li><a href="video-bg.html">video-bg</a></li>
 
            </ul>
        </nav>
