--- a/sticky-header.html
+++ b/sticky-header.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/library.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <title>FW</title>
+    <title>Sticky header</title>
 </head>
 <body>
 
@@ -33,21 +33,10 @@
 <main>
 <div class="center">
    
-   <!--Menu Top Fixed--------------------------------------------------------------------------------->
-   
    <div class="menu-top-fixed">
        <nav class="nav-fixed">
            <ul class="nav-fixed__list">
                <li><a href="index.html">Главная</a></li>
-               <li><a href="menu-page.html">Меню</a></li>
-               <li><a href="bg-attach.html">Фон-фикс</a></li>
-               <li><a href="form-line.html">Поиск сверху</a></li>
-               <li><a href="slider.html">Слайдер</a></li>
-               <li><a href="select.html">Селект</a></li>
-               <li><a href="language.html">Выбор языка</a></li>
-               <li><a href="goods-block.html">Магазин</a></li>
-               <li><a href="simple-header.html">Sticky header</a></li>
-
            </ul>
        </nav>
    </div>
