--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                <li><a href="side-nav.html">Side nav</a></li>
                <li><a href="tooltip.html">Tooltip</a></li>
                <li><a href="goods-cards.html">Превью товара</a></li>
+               <li><a href="form.html">Форма</a></li>
+               <li><a href="footer-test.html">Форма</a></li>
 
            </ul>
        </nav>
