--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                <li><a href="button-test.html">Кнопка</a></li>
                <li><a href="menu-table.html">Nav</a></li>
                <li><a href="video-bg.html">video-bg</a></li>
+               <li><a href="shop-page.html">shop-page</a></li>
 
            </ul>
        </nav>
