--- a/buttons.html
+++ b/buttons.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.css">
 
-    <title>Title it!</title>
+    <title>Buttons!</title>
 </head>
 
 <body>
