--- a/icons-move.html
+++ b/icons-move.html
@@ -40,7 +40,8 @@
         <div class="round-ic">
             <div class="center">
                 <ul>
-                    <li class="round-ic__item"><a href="#">
+                    <li class="round-ic__item">
+                       <a href="#">
                         <span class="round-ic__thumb"></span>
                         <span class="round-ic__title">10 000+</span>
                         <span class="round-ic__text">Довольных клиентов</span>
